[package]
name = "scim-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
nom = "7.1.3"
rust_decimal = "1.32.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"

[dev-dependencies]
rust_decimal_macros = "1.32.0"
test-case = "3.2.1"
