[package]
name = "scim-filter"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "SCIM filter specification implemented in Rust"
homepage = "https://github.com/matteosister/scim-filter"
repository = "https://github.com/matteosister/scim-filter"
documentation = "https://docs.rs/scim-filter"
readme = "README.md"
keywords = ["scim"]
categories = ["parsing"]

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
nom = "7.1.3"
rust_decimal = "1.32.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
log = "0.4.20"

[dev-dependencies]
rust_decimal_macros = "1.32.0"
test-case = "3.2.1"
